# protocom

./: .clang-uml  .gitignore  Authenticator.cpp  Authenticator.h  CMakeLists.txt  Client.cpp  ClientHandler.cpp  ClientHandler.h  EncrMessageCoder.cpp  EncrMessageCoder.h  FrameReader.cpp  IFrameIO.cpp  IIOFrame.cpp  IIOFrame.h  IOFrameSocket.cpp  IOFrameSocket.h  LICENSE  MessageCoder.cpp  MessageCoder.h  NullUserHandlerFactory.cpp  PDeframer.cpp  PFramer.cpp  ProtocolAuthenticationHandler.cpp  ProtocolConnectedHandler.cpp  ProtocolConnectedHandler.h  ProtocolContext.cpp  ProtocolContext.h  ProtocolStateHandler.cpp  ProtocolStateHandler.h  ProtocolUserHandler.cpp  ProtocolUserHandlerFactory.cpp  Server.cpp  Server.h  ServerClientHandler.cpp  ServerClientHandler.h  ServerWorker.cpp  TestClient.cpp  TestClient.h  TestUserHandler.cpp  TestUserHandlerFactory.cpp  (+16 more)
diagrams/: myproject_class.mmd  myproject_class.puml
host_files/: pcomserver.pb.h  testuserprotocol.pb.h
protocom/: Authenticator.h  Client.h  EncrMessageCoder.h  IFrameIO.h  IFrameSink.h  IIOFrame.h  IOFrameSocket.h  MessageCoder.h  NullUserHandlerFactory.h  PDeframer.h  PFramer.h  ProtocolAuthenticationHandler.h  ProtocolContext.h  ProtocolUserHandler.h  ProtocolUserHandlerFactory.h  Server.h  ServerClientHandler.h  ServerWorker.h  TestUserHandler.h  WorkQueue.h  x25519KexProtocol.h
